--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -206,8 +206,8 @@
 %%%    End of preamble    %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\begin{document}
-%
+\begin{document}
+
 %\maketitle
 %
 %\tableofcontents
@@ -801,10 +801,26 @@
 %\section{Rough description of the algorithm}
 %For every image~-- or more general for every ``object'' like  images, spaces or newlines~-- several properties like width, height, aspect ratio and others have to be saved. In any object oriented programming language this would probably be solved by writing a class, which can store the various properties in fields, and creating instances for any of the considered objects.
 
-\begin{subfiglist}{1 2}
-  \subfiglistfile{1}{figures/01.png}
-  \subfiglistfile{2}{figures/02.png}
+\begin{subfiglist}{1 2 3 4 5 6 }%7 8 9}% {10} {11} {12} {13} {14}}
+%{
+%	1 @{\color{red}\rule{2ex}{2ex}} 2 3 \\ 
+%	{ 4 \\ 5 6 } 7 { 8 9 \\ {10} } \\[3ex]
+%	{11} {12} @{\hspace*{3ex}} {13} {14}
+%}
+\subfiglistfile{1}{figures/01.png}
+\subfiglistfile{2}{figures/02.png}
+\subfiglistfile{3}{figures/03.png}
+\subfiglistfile{4}{figures/04.png}
+\subfiglistfile{5}{figures/05.png}
+\subfiglistfile{6}{figures/06.png}
+%\subfiglistfile{7}{figures/07.png}
+%\subfiglistfile{8}{figures/08.png}
+%\subfiglistfile{9}{figures/09.png}
+%\subfiglistfile{10}{figures/10.png}
+%\subfiglistfile{11}{figures/11.png}
+%\subfiglistfile{12}{figures/12.png}
+%\subfiglistfile{13}{figures/13.png}
+%\subfiglistfile{14}{figures/14.png}
 \end{subfiglist}
-
 
 \end{document}
