Quick fix for \subfiglist_tl_if_eq_charcode:nn leaving tokens in stream when acting on nested token lists.

--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 * Check for unknown keys in subfiglist package options
 * Check if new method of choice key setting works with older l3keys
+* Rewrite \subfiglist_tl_if_eq_charcode:nn to actually compare charcodes
