--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -801,7 +801,8 @@
 %\section{Rough description of the algorithm}
 %For every image~-- or more general for every ``object'' like  images, spaces or newlines~-- several properties like width, height, aspect ratio and others have to be saved. In any object oriented programming language this would probably be solved by writing a class, which can store the various properties in fields, and creating instances for any of the considered objects.
 
-\begin{subfiglist}{1 2 3 4 5 6 }%7 8 9}% {10} {11} {12} {13} {14}}
+\captionsetup{type=figure}
+\begin{subfiglist}{ 1 2 3 4 5 6 }%7 8 9}% {10} {11} {12} {13} {14}}
 %{
 %	1 @{\color{red}\rule{2ex}{2ex}} 2 3 \\ 
 %	{ 4 \\ 5 6 } 7 { 8 9 \\ {10} } \\[3ex]
