--- a/TODO
+++ b/TODO
@@ -1,4 +1,13 @@
+TODO
+
 * Check for unknown keys in subfiglist package options
 * Check if new method of choice key setting works with older l3keys
+* Use \subfiglist_token_if_eq_charcode:NN to compare \\ with \\.
+* Test all error messages
+
+
+
+DONE
+
 * Rewrite \subfiglist_tl_if_eq_charcode:nn to actually compare charcodes
 * Use working \subfiglist_tl_if_eq_charcode:nn in \subfiglist_is_float_or_empty to detect decimal separator.
