--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -311,7 +311,7 @@
     % Error catching
     unknown.code:n   =
     {
-      \msg_error:nnxn { subfiglist } { option~unknown }
+      \msg_error:nnfn { subfiglist } { option~unknown }
         { \l_keys_key_tl } { environment~subfiglist }
     }
   }
@@ -346,7 +346,7 @@
     % Error catching
     unknown.code:n   =
     {
-      \msg_error:nnxx { subfiglist } { option~unknown }
+      \msg_error:nnff { subfiglist } { option~unknown }
         { \l_keys_key_tl } { command~\subfiglist_csname_tl }
     }
   }
@@ -403,7 +403,7 @@
     % Error catching
     unknown.code:n          =
     {
-      \msg_error:nnxn { subfiglist } { option~unknown }
+      \msg_error:nnff { subfiglist } { option~unknown }
         { \l_keys_key_tl } { command~\subfiglist_csname_tl }
     }
   }
@@ -473,16 +473,16 @@
 %%%   Generate variants of some commands   %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\cs_generate_variant:Nn \dim_set:Nn  { Nx }
-\cs_generate_variant:Nn \dim_add:Nn  { Nx }
-\cs_generate_variant:Nn \dim_sub:Nn  { Nx }
-\cs_generate_variant:Nn \fp_set:Nn   { Nx }
-\cs_generate_variant:Nn \fp_add:Nn   { Nx }
-\cs_generate_variant:Nn \fp_sub:Nn   { Nx }
-\cs_generate_variant:Nn \bool_set:Nn { Nx }
-\cs_generate_variant:Nn \msg_error:nnnn { nnnx }
-\cs_generate_variant:Nn \msg_error:nnnn { nnxn }
-\cs_generate_variant:Nn \msg_error:nnnn { nnxx }
+%\cs_generate_variant:Nn \dim_set:Nn  { Nx }
+%\cs_generate_variant:Nn \dim_add:Nn  { Nx }
+%\cs_generate_variant:Nn \dim_sub:Nn  { Nx }
+%\cs_generate_variant:Nn \fp_set:Nn   { Nx }
+%\cs_generate_variant:Nn \fp_add:Nn   { Nx }
+%\cs_generate_variant:Nn \fp_sub:Nn   { Nx }
+%\cs_generate_variant:Nn \bool_set:Nn { Nx }
+\cs_generate_variant:Nn \msg_error:nnnn { nnnf }
+\cs_generate_variant:Nn \msg_error:nnnn { nnfn }
+\cs_generate_variant:Nn \msg_error:nnnn { nnff }
 
 
 
@@ -630,9 +630,9 @@
 \cs_generate_variant:Nn \subfiglist_is_integer:nT  { f }
 \cs_generate_variant:Nn \subfiglist_is_integer:nF  { f }
 \cs_generate_variant:Nn \subfiglist_is_integer:nTF { f }
-\cs_generate_variant:Nn \subfiglist_is_integer:nT  { x }
-\cs_generate_variant:Nn \subfiglist_is_integer:nF  { x }
-\cs_generate_variant:Nn \subfiglist_is_integer:nTF { x }
+%\cs_generate_variant:Nn \subfiglist_is_integer:nT  { x }
+%\cs_generate_variant:Nn \subfiglist_is_integer:nF  { x }
+%\cs_generate_variant:Nn \subfiglist_is_integer:nTF { x }
 
 
 \prg_new_conditional:Npnn \subfiglist_token_if_eq_charcode:NN #1 #2 { p, T, F, TF }
@@ -779,6 +779,16 @@
 \cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnTF { fn }
 \cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnTF { ff }
 
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnT  { nx }
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnT  { xn }
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnT  { xx }
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnF  { nx }
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnF  { xn }
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnF  { xx }
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnTF { nx }
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnTF { xn }
+%\cs_generate_variant:Nn \subfiglist_tl_if_eq_charcode:nnTF { xx }
+
 
 % Test whether token list is a float or empty
 \prg_new_conditional:Npnn \subfiglist_is_float_or_empty:n #1 { p, T, F, TF }
@@ -843,9 +853,9 @@
 \cs_generate_variant:Nn \subfiglist_is_float_or_empty:nT  { f }
 \cs_generate_variant:Nn \subfiglist_is_float_or_empty:nF  { f }
 \cs_generate_variant:Nn \subfiglist_is_float_or_empty:nTF { f }
-\cs_generate_variant:Nn \subfiglist_is_float:nT  { x }
-\cs_generate_variant:Nn \subfiglist_is_float:nF  { x }
-\cs_generate_variant:Nn \subfiglist_is_float:nTF { x }
+%\cs_generate_variant:Nn \subfiglist_is_float:nT  { x }
+%\cs_generate_variant:Nn \subfiglist_is_float:nF  { x }
+%\cs_generate_variant:Nn \subfiglist_is_float:nTF { x }
 
 
 % Test truth value of various conditionals and print result
@@ -1069,9 +1079,9 @@
   }
 }
 
-\cs_generate_variant:Nn \subfiglist_load:nn { nx }
-\cs_generate_variant:Nn \subfiglist_load:nn { xn }
-\cs_generate_variant:Nn \subfiglist_load:nn { xx }
+%\cs_generate_variant:Nn \subfiglist_load:nn { nx }
+%\cs_generate_variant:Nn \subfiglist_load:nn { xn }
+%\cs_generate_variant:Nn \subfiglist_load:nn { xx }
 
 
 % Define command for label inset
@@ -1201,13 +1211,13 @@
   \subfiglist_load:xx { \tl_item:Nn \subfiglist_file_names_tl { #1 } } { #2 }
 }
 
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { nnx }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { nxn }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { nxx }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { xnn }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { xnx }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { xxn }
-\cs_generate_variant:Nn \subfiglist_put_file:nnn { xxx }
+%\cs_generate_variant:Nn \subfiglist_put_file:nnn { nnx }
+%\cs_generate_variant:Nn \subfiglist_put_file:nnn { nxn }
+%\cs_generate_variant:Nn \subfiglist_put_file:nnn { nxx }
+%\cs_generate_variant:Nn \subfiglist_put_file:nnn { xnn }
+%\cs_generate_variant:Nn \subfiglist_put_file:nnn { xnx }
+%\cs_generate_variant:Nn \subfiglist_put_file:nnn { xxn }
+%\cs_generate_variant:Nn \subfiglist_put_file:nnn { xxx }
 
 % Output specified dummy file
 \cs_new:Npn \subfiglist_put_dummy_file:nnn #1 #2 #3
@@ -1252,13 +1262,13 @@
   \group_end:
 }
 
-\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nnx }
-\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nxn }
-\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nxx }
-\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xnn }
-\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xnx }
-\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xxn }
-\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xxx }
+%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nnx }
+%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nxn }
+%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { nxx }
+%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xnn }
+%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xnx }
+%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xxn }
+%\cs_generate_variant:Nn \subfiglist_put_dummy_file:nnn { xxx }
 
 % Output specified dummy
 \cs_new:Npn \subfiglist_put_dummy:nnn #1 #2 #3
@@ -1303,13 +1313,13 @@
   \group_end:
 }
 
-\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nnx }
-\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nxn }
-\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nxx }
-\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xnn }
-\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xnx }
-\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xxn }
-\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xxx }
+%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nnx }
+%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nxn }
+%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { nxx }
+%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xnn }
+%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xnx }
+%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xxn }
+%\cs_generate_variant:Nn \subfiglist_put_dummy:nnn { xxx }
 
 % Output specified canvas
 \cs_new:Npn \subfiglist_put_canvas:nn #1 #2
@@ -1573,9 +1583,9 @@
   \group_end:
 }
 
-\cs_generate_variant:Nn \subfiglist_get_file_ratio:nn { nx }
-\cs_generate_variant:Nn \subfiglist_get_file_ratio:nn { xn }
-\cs_generate_variant:Nn \subfiglist_get_file_ratio:nn { xx }
+%\cs_generate_variant:Nn \subfiglist_get_file_ratio:nn { nx }
+%\cs_generate_variant:Nn \subfiglist_get_file_ratio:nn { xn }
+%\cs_generate_variant:Nn \subfiglist_get_file_ratio:nn { xx }
 
 % Calculate ratio height/width of specified dummy file
 \cs_new:Npn \subfiglist_get_dummy_file_ratio:nn #1 #2
@@ -1607,9 +1617,9 @@
   \group_end:
 }
 
-\cs_generate_variant:Nn \subfiglist_get_dummy_file_ratio:nn { nx }
-\cs_generate_variant:Nn \subfiglist_get_dummy_file_ratio:nn { xn }
-\cs_generate_variant:Nn \subfiglist_get_dummy_file_ratio:nn { xx }
+%\cs_generate_variant:Nn \subfiglist_get_dummy_file_ratio:nn { nx }
+%\cs_generate_variant:Nn \subfiglist_get_dummy_file_ratio:nn { xn }
+%\cs_generate_variant:Nn \subfiglist_get_dummy_file_ratio:nn { xx }
 
 % Get ratio height/width of specified dummy
 \cs_new:Npn \subfiglist_get_dummy_ratio:nn #1 #2
@@ -1629,9 +1639,9 @@
   \group_end:
 }
 
-\cs_generate_variant:Nn \subfiglist_get_dummy_ratio:nn { nx }
-\cs_generate_variant:Nn \subfiglist_get_dummy_ratio:nn { xn }
-\cs_generate_variant:Nn \subfiglist_get_dummy_ratio:nn { xx }
+%\cs_generate_variant:Nn \subfiglist_get_dummy_ratio:nn { nx }
+%\cs_generate_variant:Nn \subfiglist_get_dummy_ratio:nn { xn }
+%\cs_generate_variant:Nn \subfiglist_get_dummy_ratio:nn { xx }
 
 % Store ratio height/width and horizontal/vertical
 % offsets of specified canvas
@@ -2464,7 +2474,7 @@
     {
       \int_compare:nTF { ##1 > \subfiglist_tempa_int }
       {
-        \msg_error:nnx { subfiglist } { missing~identifier }
+        \msg_error:nnf { subfiglist } { missing~identifier }
           { \int_use:N \subfiglist_tempa_int }
         \tl_map_break:
       }{
@@ -2522,7 +2532,7 @@
     {
       \int_compare:nTF { ##1 > \subfiglist_tempa_int }
       {
-        \msg_error:nnx { subfiglist } { missing~canvas }
+        \msg_error:nnf { subfiglist } { missing~canvas }
           { \int_use:N \subfiglist_tempa_int }
         \tl_map_break:
       }{
@@ -2566,7 +2576,7 @@
   % Check if first argument is in range
   \int_compare:nTF { #2 > \subfiglist_canvas_int }
   {
-    \msg_error:nnxx { subfiglist } { argument~out~of~range }
+    \msg_error:nnff { subfiglist } { argument~out~of~range }
       { #2 } { \int_use:N \subfiglist_canvas_int }
   }{
     % Process opitonal arguments
@@ -2617,7 +2627,7 @@
   % Check if first argument is in range
   \int_compare:nTF { #2 > \subfiglist_canvas_int }
   {
-    \msg_error:nnxx { subfiglist } { argument~out~of~range }
+    \msg_error:nnff { subfiglist } { argument~out~of~range }
       { #2 } { \int_use:N \subfiglist_canvas_int }
   }{
     % Process opitonal arguments
@@ -2675,7 +2685,7 @@
   % Check if first argument is in range
   \int_compare:nTF { #2 > \subfiglist_canvas_int }
   {
-    \msg_error:nnxx { subfiglist } { argument~out~of~range }
+    \msg_error:nnff { subfiglist } { argument~out~of~range }
       { #2 } { \int_use:N \subfiglist_canvas_int }
   }{
     % Process opitonal arguments
@@ -2726,7 +2736,7 @@
   % Check if fourth argument is in range
   \int_compare:nTF { #2 > \subfiglist_canvas_int }
   {
-    \msg_error:nnxx { subfiglist } { argument~out~of~range }
+    \msg_error:nnff { subfiglist } { argument~out~of~range }
       { #2 } { \int_use:N \subfiglist_canvas_int }
   }{
     % Process opitonal arguments
@@ -2785,7 +2795,7 @@
   % Check if first argument is in range
   \int_compare:nTF { #1 > \subfiglist_canvas_int }
   {
-    \msg_error:nnxx { subfiglist } { argument~out~of~range }
+    \msg_error:nnff { subfiglist } { argument~out~of~range }
       { #1 } { \int_use:N \subfiglist_canvas_int }
   }{
     % Save image number and content
