Consistent use of name prefix "subfiglist" in definition of \subfiglist_group_var_return:NN

--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -509,36 +509,33 @@
 
 % Provide framework for exporting group scope local variables according to discussion
 % at https://tex.stackexchange.com/questions/56294/how-do-i-get-a-value-out-of-a-group
-\cs_if_free:NT \group_insert_after:N
-{
-  \cs_set_eq:NN \group_insert_after:N \group_execute_after:N
-}
+\cs_set_eq:NN \subfiglist_group_insert_after:N \group_execute_after:N
 
 \cs_generate_variant:Nn \tl_if_empty:nT {v}
-\cs_generate_variant:Nn \group_insert_after:N {c}
+\cs_generate_variant:Nn \subfiglist_group_insert_after:N {c}
 
 \cs_new:Nn \subfiglist_group_after_insert:nn
 { 
-  \cs_if_exist:cF { g_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
+  \cs_if_exist:cF { g_subfiglist_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
   {
-    \tl_new:c { g_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
+    \tl_new:c { g_subfiglist_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
   }
 
   % First time the function is executed inside the group:
-  \tl_if_empty:vT { g_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
+  \tl_if_empty:vT { g_subfiglist_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
   {
     % Set up the aftergroup execution:
-    \group_insert_after:c  { g_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
+    \subfiglist_group_insert_after:c { g_subfiglist_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
 
     % Reset the material for aftergroup execution:
-    \tl_gset:cx { g_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
+    \tl_gset:cx { g_subfiglist_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
     {
-      \tl_gclear:c { g_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
+      \tl_gclear:c { g_subfiglist_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
     }
   }
 
   % Append the new material to the aftergroup execution:
-  \tl_gput_right:cx  { g_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
+  \tl_gput_right:cx  { g_subfiglist_aftergroup_ \int_use:N \etex_currentgrouplevel:D _tl }
   {
     \exp_not:n { #1 {#2} }
   }
