Replaced variants of \subfiglist_is_integer_or_empty with full argument expansion by variants with double argument expansion

--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@ TODO
 * Test all error messages
 * Use sequences in place of token lists
 * Delete unnecessary variables
+* Replace test for equal charcode by test for equal charcode AND equal meaning
 
 
 
